--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,35 @@
 spring.application.name = walmart
 # JWT Configuration
 jwt.secret=your-256-bit-secret-key-must-be-at-least-32-characters-long
-jwt.expiration=86400000
+jwt.expiration = 86400000
   # 24 hours in milliseconds
 jwt.refresh-expiration=604800000
   # 7 days in millisecond
 
 # PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
-spring.datasource.username=fiifi
-spring.datasource.password=
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://localhost:5432/mydatabase
+spring.datasource.username = fiifi
+spring.datasource.password =
+spring.datasource.driver-class-name = org.postgresql.Driver
 
 # JPA/Hibernate Configuration
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto = update
   # or 'create-drop' for development
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql = true
 
 # Optional: Connection pool settings
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.connection-timeout = 30000
+spring.datasource.hikari.maximum-pool-size = 5
 spring.datasource.hikari.minimum-idle=2
+
+
+
+# Enable static resource handling
+spring.web.resources.add-mappings=true
+spring.web.resources.static-locations = classpath:/static/
+
+# Flutter web needs these MIME types
+spring.web.resources.cache.cachecontrol.max-age = 365d
+spring.web.resources.cache.cachecontrol.no-cache = false
