--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,7 @@ spring.web.resources.static-locations = classpath:/static/
 # Flutter web needs these MIME types
 spring.web.resources.cache.cachecontrol.max-age = 365d
 spring.web.resources.cache.cachecontrol.no-cache = false
+
+# Application.properties
+logging.level.com.walmart.walmart=DEBUG
+logging.level.org.springframework.security=DEBUG
